Updated Ford with the path sorting function

--- a/AA/Ford Fulkerson.ipynb
+++ b/AA/Ford Fulkerson.ipynb
@@ -242,19 +242,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "26752592",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Perfected Code"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "872ecd80",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All possible paths from S to T : [['S', 'A', 'B', 'T'], ['S', 'A', 'T'], ['S', 'B', 'T']]\n",
+      "Max flow is :  5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def ford_fulkerson(possible_paths, graph):\n",
+    "    flow = 0\n",
+    "    # Sort possible paths based on the minimum edge value\n",
+    "    possible_paths.sort(key=lambda path: min(graph[path[i]][path[i + 1]] for i in range(len(path) - 1)))\n",
+    "    # Traversing each possible path one by one\n",
+    "    for path in possible_paths:\n",
+    "        min_edge = float('inf')\n",
+    "        # Finding the augmenting (minimum edge)\n",
+    "        for i in range(len(path) - 1):\n",
+    "            edge_length = graph[path[i]][path[i + 1]]\n",
+    "            min_edge = min(min_edge, edge_length)\n",
+    "        # Updating the capacities and handling bottlenecks (full flow)\n",
+    "        for i in range(len(path) - 1):\n",
+    "            # When edge in full flow\n",
+    "            if graph[path[i]][path[i + 1]] == 0:\n",
+    "                print(f'Path {path} not possible')\n",
+    "                break\n",
+    "            else:\n",
+    "                graph[path[i]][path[i + 1]] -= min_edge\n",
+    "        flow += min_edge\n",
+    "    return flow\n",
+    "\n",
+    "\n",
+    "# DFS approach to find all possible paths\n",
+    "def dfs_paths(graph, start, goal, path=[]):\n",
+    "    path = path + [start]\n",
+    "    if start == goal:\n",
+    "        return [path]\n",
+    "    if start not in graph:\n",
+    "        return []\n",
+    "    paths = []\n",
+    "    for neighbor in graph[start]:\n",
+    "        if neighbor not in path:\n",
+    "            new_paths = dfs_paths(graph, neighbor, goal, path)\n",
+    "            for new_path in new_paths:\n",
+    "                paths.append(new_path)\n",
+    "    return paths\n",
+    "\n",
+    "graph = {\n",
+    "    'S' : {'A' : 3, 'B' : 2},\n",
+    "    'A': {'B': 5, 'T' : 2 },\n",
+    "    'B': {'T': 3}\n",
+    "}\n",
+    "\n",
+    "# graph2 = {\n",
+    "#     'S' : {'A' : 100, 'B' : 100},\n",
+    "#     'A': {'C': 7},\n",
+    "#     'B': {'C': 3},\n",
+    "#     'C':{'T':1}\n",
+    "# }\n",
+    "# graph3 = {\n",
+    "#     'S' : {'A' : 9, 'D' : 3},\n",
+    "#     'A': {'B': 9},\n",
+    "#     'B': {'T': 2},\n",
+    "#     'D': {'C':4,'B':7},\n",
+    "#     'C':{'T':5}\n",
+    "# }\n",
+    "\n",
+    "# graph4 = {\n",
+    "#     '1' : {'2' : 8, '3' : 10},\n",
+    "#     '2': {'4': 2,'5':7},\n",
+    "#     '3': {'2': 3,'5':12},\n",
+    "#     '4': {'6':10},\n",
+    "#     '5':{'4':4,'6':8}\n",
+    "# }\n",
+    "\n",
+    "source = 'S'\n",
+    "target = 'T'\n",
+    "possible_paths = dfs_paths(graph, source, target)\n",
+    "print(\"All possible paths from\", source, \"to\", target, \":\", possible_paths)\n",
+    "\n",
+    "max_flow = ford_fulkerson(possible_paths,graph)\n",
+    "print('Max flow is : ',max_flow)"
+   ]
   },
   {
    "cell_type": "code",
