Updated the formula cost function

--- a/AA/Hiring Problem.ipynb
+++ b/AA/Hiring Problem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "320a8faf",
    "metadata": {},
    "outputs": [
@@ -10,14 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5, 10, 8, 7, 9, 2, 6, 4, 1, 3]\n",
-      "Total cost: 72\n",
+      "[5, 4, 3, 7, 6, 10, 8, 1, 2, 9]\n",
+      "Total cost: 86\n",
       "Candidates interviewed: 10\n",
-      "150\n"
+      "3\n",
+      "Formula cost :  80\n"
      ]
     }
    ],
    "source": [
+    "# The hiring problem simulates a hiring agency that interviews and hires candidates on your behalf, there is an interview cost ci and a hiring cost ch attached to each of them, at any point the best candidate is hired, we need to compute the total cost incurred by the company\n",
     "import random\n",
     "\n",
     "def hiring_problem(candidates):\n",
@@ -25,11 +27,13 @@
     "    interview_cost = 5\n",
     "    pay_per_day  = 2\n",
     "    current_best = 0\n",
-    "    days_worked = 1\n",
+    "    days_worked = 0\n",
     "    candidates_interviewed = 0\n",
     "    cost = 0  \n",
+    "    hirings = 0\n",
     "    for candidate in candidates:\n",
     "        if candidate > current_best:\n",
+    "            hirings += 1\n",
     "            current_best = candidate\n",
     "            hiring_new_cost = interview_cost + hiring_cost\n",
     "            firing_current_cost = days_worked * pay_per_day\n",
@@ -39,7 +43,7 @@
     "            cost += interview_cost\n",
     "            days_worked += 1\n",
     "        candidates_interviewed += 1\n",
-    "    return cost, candidates_interviewed\n",
+    "    return cost, candidates_interviewed,hirings\n",
     "\n",
     "\n",
     "# Worst Case\n",
@@ -49,12 +53,12 @@
     "# Average Case\n",
     "candidates = random.sample(range(1, 11), 10)\n",
     "print(candidates)\n",
-    "cost, candidates_interviewed = hiring_problem(candidates)\n",
+    "cost, candidates_interviewed,hirings = hiring_problem(candidates)\n",
     "print(\"Total cost:\", cost)\n",
     "print(\"Candidates interviewed:\", candidates_interviewed)\n",
-    "# The formula cost should be equal to or greater than equal to total cost ????\n",
-    "formula_cost = 10*5 + candidates_interviewed*10\n",
-    "print(formula_cost)"
+    "formula_cost = 10*5 + hirings*10\n",
+    "print(hirings)\n",
+    "print('Formula cost : ',formula_cost)"
    ]
   },
   {
