--- a/AA/Randomised QuickSort.ipynb
+++ b/AA/Randomised QuickSort.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "04e20a0a",
    "metadata": {},
    "outputs": [
@@ -10,10 +10,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sorted using a rqs approach: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]\n",
-      "Time taken by rqs: 0.0 Comparisons: 44\n",
-      "Sorted using normal qs approach: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]\n",
-      "Time taken by normal qs: 0.0 Comparisons: 105\n"
+      "Sorted using a rqs approach: [-8, 1, 3, 4, 5]\n",
+      "Time taken by rqs: 0.0 Comparisons: 9\n",
+      "Sorted using normal qs approach: [-8, 1, 3, 4, 5]\n",
+      "Time taken by normal qs: 0.0 Comparisons: 7\n"
      ]
     }
    ],
@@ -55,7 +55,7 @@
     "        return normal_qs_algo(left_list) + [pivot_value] + normal_qs_algo(right_list)\n",
     "\n",
     "\n",
-    "array = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15]\n",
+    "array = [1,-8,3,4,5]\n",
     "array_copy = array.copy() \n",
     "start_time = time.time()\n",
     "print(\"Sorted using a rqs approach:\", randomized_qs_algo(array))\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "503d233e",
    "metadata": {},
    "outputs": [
@@ -76,8 +76,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of swaps with random pivot: 3\n",
-      "Number of swaps with leftmost pivot: 3\n"
+      "Number of swaps with random pivot: 0\n",
+      "Number of swaps with leftmost pivot: 1\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
     "        quicksort_leftmost(array, partition + 1, high)\n",
     "        return swaps\n",
     "\n",
-    "array = [4, 1, 3, 5, 6]\n",
+    "array = [1,2,3,4,5]\n",
     "array_copy = array[:]  \n",
     "swaps_random = quicksort_random(array, 0, len(array) - 1)\n",
     "swaps_leftmost = quicksort_leftmost(array_copy, 0, len(array_copy) - 1)\n",
@@ -136,6 +136,378 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "65ec3aab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "093a7460",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LUMOTO BASE: 0.0\n",
+      "[1, 1, 5, 7, 7, 7, 8, 8, 9, 9, 11, 11, 12, 14, 15, 17, 21, 21, 21, 22, 23, 23, 25, 26, 27, 28, 30, 30, 31, 32, 32, 34, 35, 38, 38, 41, 43, 44, 45, 45, 49, 49, 49, 49, 50, 50, 53, 54, 55, 55, 56, 56, 58, 59, 59, 59, 61, 62, 62, 63, 63, 65, 65, 66, 67, 68, 69, 69, 69, 70, 70, 73, 73, 74, 74, 75, 76, 78, 79, 79, 79, 80, 81, 81, 83, 88, 90, 90, 90, 95, 95, 98, 98, 99, 99, 100, 103, 105, 106, 106, 107, 107, 110, 111, 113, 113, 115, 117, 117, 118, 118, 121, 121, 122, 126, 126, 126, 128, 131, 131, 132, 134, 134, 135, 135, 135, 135, 137, 138, 138, 139, 140, 141, 141, 142, 142, 142, 143, 144, 145, 146, 147, 147, 147, 148, 150, 151, 152, 153, 154, 155, 157, 158, 158, 158, 160, 160, 164, 164, 164, 164, 165, 166, 166, 167, 169, 170, 170, 171, 172, 172, 173, 174, 175, 176, 177, 178, 178, 179, 181, 184, 186, 187, 187, 188, 189, 192, 192, 192, 192, 194, 194, 195, 195, 195, 197, 198, 199, 200, 201, 201, 201, 202, 203, 204, 204, 204, 205, 205, 205, 205, 208, 209, 211, 212, 213, 215, 216, 218, 219, 221, 222, 222, 222, 228, 230, 233, 236, 236, 236, 238, 238, 239, 240, 240, 240, 241, 242, 242, 242, 242, 242, 243, 246, 246, 248, 252, 254, 254, 255, 256, 256, 257, 258, 260, 261, 261, 262, 263, 265, 266, 269, 269, 270, 270, 271, 271, 271, 273, 274, 275, 278, 283, 285, 287, 291, 291, 292, 293, 294, 297, 297, 297, 298, 299, 299, 300, 300, 301, 301, 302, 303, 303, 303, 304, 307, 308, 308, 308, 309, 312, 313, 314, 314, 315, 315, 316, 317, 317, 318, 320, 323, 324, 325, 325, 326, 327, 327, 328, 332, 332, 333, 336, 336, 338, 338, 340, 341, 341, 342, 343, 344, 344, 345, 346, 347, 348, 349, 350, 351, 352, 352, 352, 356, 356, 356, 357, 358, 359, 363, 366, 366, 367, 368, 368, 370, 370, 371, 371, 371, 372, 376, 376, 376, 376, 378, 380, 380, 381, 383, 384, 386, 386, 390, 391, 391, 392, 395, 395, 396, 397, 398, 399, 400, 401, 402, 402, 403, 404, 404, 405, 405, 405, 405, 408, 410, 411, 412, 412, 413, 414, 415, 417, 418, 419, 421, 422, 422, 424, 424, 424, 425, 426, 426, 426, 428, 430, 430, 430, 430, 431, 431, 435, 435, 435, 436, 437, 439, 443, 443, 443, 443, 444, 446, 447, 447, 448, 448, 450, 452, 455, 455, 456, 456, 457, 457, 457, 458, 458, 459, 460, 462, 462, 463, 463, 464, 465, 466, 468, 470, 470, 476, 478, 481, 483, 483, 484, 485, 485, 487, 487, 488, 488, 489, 490, 491, 492, 492, 492, 494, 496, 498, 499, 499, 500, 501, 505, 506, 508, 508, 508, 509, 509, 511, 511, 511, 514, 516, 516, 516, 517, 518, 519, 521, 522, 522, 522, 527, 528, 529, 529, 529, 531, 531, 531, 531, 532, 532, 533, 535, 536, 536, 536, 537, 537, 538, 538, 540, 543, 543, 545, 545, 546, 547, 547, 549, 549, 550, 550, 550, 551, 553, 554, 555, 555, 557, 558, 559, 559, 559, 561, 561, 563, 565, 566, 568, 568, 569, 570, 570, 571, 572, 574, 575, 577, 578, 578, 585, 586, 587, 587, 588, 589, 590, 590, 591, 591, 593, 593, 593, 594, 595, 596, 597, 598, 599, 601, 602, 602, 603, 603, 603, 604, 606, 606, 607, 608, 610, 610, 611, 612, 613, 615, 616, 617, 618, 618, 619, 619, 620, 620, 620, 621, 621, 621, 622, 624, 625, 628, 628, 628, 629, 632, 633, 633, 633, 633, 634, 634, 635, 635, 636, 637, 638, 642, 643, 643, 644, 644, 647, 648, 648, 650, 651, 652, 652, 653, 655, 657, 658, 658, 659, 659, 660, 662, 663, 665, 665, 666, 666, 667, 668, 668, 670, 670, 672, 673, 676, 678, 679, 679, 679, 679, 681, 681, 682, 682, 684, 685, 685, 687, 688, 690, 692, 693, 693, 694, 696, 696, 696, 699, 700, 700, 700, 700, 702, 704, 705, 708, 708, 711, 711, 711, 712, 712, 712, 712, 713, 713, 713, 714, 715, 716, 718, 718, 719, 720, 720, 721, 722, 722, 723, 726, 727, 727, 729, 731, 731, 732, 733, 734, 734, 738, 740, 742, 746, 747, 749, 751, 752, 752, 753, 753, 753, 756, 756, 756, 759, 760, 761, 761, 762, 762, 763, 763, 766, 768, 769, 770, 770, 770, 770, 771, 771, 772, 772, 774, 774, 775, 777, 780, 780, 782, 783, 784, 786, 786, 786, 787, 788, 789, 789, 789, 790, 790, 798, 800, 800, 801, 802, 803, 804, 804, 804, 806, 807, 808, 809, 810, 810, 811, 813, 815, 815, 816, 818, 819, 819, 820, 820, 821, 821, 822, 823, 823, 823, 825, 829, 829, 831, 831, 832, 833, 834, 835, 835, 836, 836, 836, 837, 838, 838, 838, 839, 839, 841, 841, 841, 843, 844, 845, 845, 846, 847, 847, 850, 850, 851, 852, 853, 855, 857, 859, 860, 863, 863, 863, 864, 864, 866, 867, 867, 868, 868, 868, 869, 869, 870, 870, 871, 872, 874, 874, 875, 875, 876, 876, 880, 882, 884, 886, 887, 891, 892, 893, 894, 894, 896, 896, 897, 899, 899, 900, 900, 903, 903, 904, 904, 905, 909, 910, 911, 911, 911, 912, 914, 914, 915, 915, 915, 917, 918, 919, 920, 921, 922, 923, 926, 926, 928, 929, 931, 931, 933, 935, 936, 936, 938, 938, 938, 939, 940, 941, 942, 942, 943, 944, 944, 944, 946, 948, 949, 950, 951, 953, 953, 954, 956, 956, 957, 957, 957, 959, 959, 962, 962, 962, 964, 965, 965, 966, 968, 968, 969, 970, 971, 973, 974, 975, 977, 977, 978, 978, 979, 979, 981, 985, 985, 986, 988, 989, 993, 993, 993, 994, 994, 997, 997, 999, 999]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from numpy import random\n",
+    "import time\n",
+    "\n",
+    "def partitionHoare(arr, low, high):\n",
+    "    pivot = arr[low]\n",
+    "    i = low - 1\n",
+    "    j = high + 1\n",
+    "    while True:\n",
+    "        i += 1\n",
+    "        while arr[i] < pivot:\n",
+    "            i += 1\n",
+    "        j -= 1\n",
+    "        while arr[j] > pivot:\n",
+    "            j -= 1\n",
+    "        if i >= j:\n",
+    "            return j\n",
+    "        arr[i], arr[j] = arr[j], arr[i]\n",
+    "\n",
+    "def quickSortHoare(arr, low, high):\n",
+    "    if low < high:\n",
+    "        pi = partitionHoare(arr, low, high)\n",
+    "        quickSortHoare(arr, low, pi)\n",
+    "        quickSortHoare(arr, pi + 1, high)\n",
+    "\n",
+    "def partitionLomuto(arr, low, high):\n",
+    "    pivot = arr[high]\n",
+    "    i = low - 1\n",
+    "    for j in range(low, high):\n",
+    "        if arr[j] <= pivot:\n",
+    "            i += 1\n",
+    "            arr[i], arr[j] = arr[j], arr[i]\n",
+    "    arr[i + 1], arr[high] = arr[high], arr[i + 1]\n",
+    "    return i + 1\n",
+    "\n",
+    "def quickSortLomuto(arr, low, high):\n",
+    "    if low < high:\n",
+    "        pi = partitionLomuto(arr, low, high)\n",
+    "        quickSortLomuto(arr, low, pi - 1)\n",
+    "        quickSortLomuto(arr, pi + 1, high)\n",
+    "\n",
+    "# arrH = random.randint(10000000, size=(100000))\n",
+    "# arrL = arrH.copy()\n",
+    "# n = len(arrH)\n",
+    "\n",
+    "# start = time.time()\n",
+    "# quickSortHoare(arrH, 0, n - 1)\n",
+    "# end = time.time()\n",
+    "\n",
+    "# arrL = [1,3,5,2,8,9,3,2]\n",
+    "# start1 = time.time()\n",
+    "# quickSortLomuto(arrL, 0, len(arrL) - 1)\n",
+    "# end1 = time.time()\n",
+    "# print(arrL)\n",
+    "\n",
+    "# print(f'Time Hoare: {end - start}')\n",
+    "# print(f'Time Lomuto: {end1 - start1}')\n",
+    "array_size = 990\n",
+    "random_array = [random.randint(0, 1000) for _ in range(array_size)]\n",
+    "random_array1 = random_array.copy()\n",
+    "random_array2 = random_array.copy()\n",
+    "random_array3 = random_array.copy()\n",
+    "\n",
+    "start_time = time.time()\n",
+    "quickSortLomuto(random_array, 0, len(random_array) - 1)\n",
+    "end_time = time.time()\n",
+    "print(f\"LUMOTO BASE: {(end_time-start_time)*1000}\")\n",
+    "print(random_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "53cbcf55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LUMOTO BASE: 3.1290054321289062\n",
+      "LUMOTO RANDOM: 3.6902427673339844\n",
+      "HOARE BASE: 2.234935760498047\n",
+      "HOARE RANDOM: 3.228425979614258\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import time\n",
+    "\n",
+    "def lumoto_base(arr,low,high):\n",
+    "    if low<high:\n",
+    "        start = low - 1\n",
+    "        pivot = high\n",
+    "        for end in range(low,high):\n",
+    "            if arr[end] <= arr[pivot]:\n",
+    "                start+=1\n",
+    "                arr[start],arr[end] = arr[end],arr[start]\n",
+    "        arr[start+1],arr[high] = arr[high],arr[start+1]\n",
+    "        p = start+1\n",
+    "        lumoto_base(arr,low,p-1)\n",
+    "        lumoto_base(arr,p+1,high)\n",
+    "        \n",
+    "\n",
+    "def hoare_base(arr,low,high):\n",
+    "    if low<high:\n",
+    "        start = low\n",
+    "        end = high\n",
+    "        pivot = low\n",
+    "        while start<end:\n",
+    "            while arr[start]<=arr[pivot] and start<high:\n",
+    "                start+=1\n",
+    "            while arr[end]>arr[pivot]:\n",
+    "                end-=1\n",
+    "            if start<end:\n",
+    "                arr[start],arr[end] = arr[end],arr[start]\n",
+    "        arr[end],arr[pivot] = arr[pivot],arr[end]\n",
+    "        hoare_base(arr,low,end-1)\n",
+    "        hoare_base(arr,end+1,high)\n",
+    "\n",
+    "def lumoto_random(arr,low,high):\n",
+    "    if low<high:\n",
+    "        start = low - 1\n",
+    "        k = random.randint(low,high)\n",
+    "        arr[k],arr[high] = arr[high],arr[k]\n",
+    "        pivot = high\n",
+    "        for end in range(low,high):\n",
+    "            if arr[end] <= arr[pivot]:\n",
+    "                start+=1\n",
+    "                arr[start],arr[end] = arr[end],arr[start]\n",
+    "        arr[start+1],arr[high] = arr[high],arr[start+1]\n",
+    "        p = start+1\n",
+    "        lumoto_base(arr,low,p-1)\n",
+    "        lumoto_base(arr,p+1,high)\n",
+    "\n",
+    "def hoare_random(arr,low,high):\n",
+    "    if low<high:\n",
+    "        start = low\n",
+    "        end = high\n",
+    "        k = random.randint(low,high)\n",
+    "        arr[k],arr[low] = arr[low],arr[k]\n",
+    "        pivot = low\n",
+    "        while start<end:\n",
+    "            while arr[start]<=arr[pivot] and start<high:\n",
+    "                start+=1\n",
+    "            while arr[end]>arr[pivot]:\n",
+    "                end-=1\n",
+    "            if start<end:\n",
+    "                arr[start],arr[end] = arr[end],arr[start]\n",
+    "        arr[end],arr[pivot] = arr[pivot],arr[end]\n",
+    "        hoare_random(arr,low,end-1)\n",
+    "        hoare_random(arr,end+1,high)\n",
+    " \n",
+    "# arr = [1,4,2,8,9,3,5,6]\n",
+    "# lumoto_random(arr,0,len(arr)-1)\n",
+    "# print(arr)\n",
+    "\n",
+    "array_size = 990\n",
+    "random_array = [random.randint(0, 1000) for _ in range(array_size)]\n",
+    "random_array1 = random_array.copy()\n",
+    "random_array2 = random_array.copy()\n",
+    "random_array3 = random_array.copy()\n",
+    "\n",
+    "start_time = time.time()\n",
+    "lumoto_base(random_array, 0, len(random_array) - 1)\n",
+    "end_time = time.time()\n",
+    "print(f\"LUMOTO BASE: {(end_time-start_time)*1000}\")\n",
+    "\n",
+    "start_time = time.time()\n",
+    "lumoto_random(random_array1 ,0, len(random_array) - 1)\n",
+    "end_time = time.time()\n",
+    "print(f\"LUMOTO RANDOM: {(end_time-start_time)*1000}\")\n",
+    "\n",
+    "start_time = time.time()\n",
+    "hoare_base(random_array2, 0, len(random_array) - 1)\n",
+    "end_time = time.time()\n",
+    "print(f\"HOARE BASE: {(end_time-start_time)*1000}\")\n",
+    "\n",
+    "start_time = time.time()\n",
+    "hoare_random(random_array3, 0, len(random_array) - 1)\n",
+    "end_time = time.time()\n",
+    "print(f\"HOARE RANDOM: {(end_time-start_time)*1000}\")\n",
+    "\n",
+    "# import sys\n",
+    "\n",
+    "# print(sys.getrecursionlimit())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fec1603",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "068c436b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d275ad41",
+   "metadata": {},
+   "source": [
+    "# Hoare GPT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8f2b1640",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Array: [55, 92, 11, 4, 52, 67, 93, 18, 47, 8, 84, 51, 6, 75, 99, 14, 80, 40, 38, 94, 82, 39, 49, 32, 95, 15, 28, 100, 45, 29, 71, 66, 70, 13, 76, 83, 20, 23, 81, 53, 88, 27, 72, 58, 77, 19, 79, 5, 73, 48, 87, 90, 64, 3, 9, 50, 42, 25, 10, 89, 12, 78, 7, 68, 86, 56, 98, 96, 24, 37, 1, 74, 54, 36, 60, 69, 16, 34, 59, 35, 21, 22, 91, 41, 62, 31, 30, 33, 2, 43, 61, 44, 63, 17, 57, 46, 85, 26, 65, 97]\n",
+      "Time taken:  1.0075569152832031\n",
+      "Sorted Array using Hoare's Partition Scheme: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100]\n",
+      "Swaps using Hoare's approach: 160\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import time\n",
+    "swaps_hoare = 0\n",
+    "\n",
+    "def partition_hoare(arr, low, high):\n",
+    "    global swaps_hoare\n",
+    "    pivot = arr[low]\n",
+    "    i = low - 1\n",
+    "    j = high + 1\n",
+    "    \n",
+    "    while True:\n",
+    "        i += 1\n",
+    "        while arr[i] < pivot:\n",
+    "            i += 1\n",
+    "        j -= 1\n",
+    "        while arr[j] > pivot:\n",
+    "            j -= 1\n",
+    "        if i >= j:\n",
+    "            return j\n",
+    "        swaps_hoare += 1\n",
+    "        arr[i], arr[j] = arr[j], arr[i]\n",
+    "\n",
+    "def quicksort_hoare(arr, low, high):\n",
+    "    if low < high:\n",
+    "        pivot = partition_hoare(arr, low, high)\n",
+    "        quicksort_hoare(arr, low, pivot)\n",
+    "        quicksort_hoare(arr, pivot + 1, high)\n",
+    "\n",
+    "arr = list(range(1,101))\n",
+    "random.shuffle(arr)\n",
+    "print(\"Original Array:\", arr)\n",
+    "start_time = time.time()\n",
+    "quicksort_hoare(arr, 0, len(arr) - 1)\n",
+    "end_time = time.time()\n",
+    "print(\"Time taken: \",(end_time-start_time)*1000)\n",
+    "print(\"Sorted Array using Hoare's Partition Scheme:\", arr)\n",
+    "print(\"Swaps using Hoare's approach:\", swaps_hoare)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8af74907",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "618c3c70",
+   "metadata": {},
+   "source": [
+    "# Lumoto GPT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b5ce8809",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Array: [88, 25, 34, 48, 26, 37, 96, 29, 8, 61, 84, 59, 20, 11, 82, 71, 7, 80, 30, 2, 85, 77, 78, 46, 13, 68, 45, 97, 53, 90, 44, 42, 17, 32, 4, 65, 14, 10, 86, 43, 63, 27, 72, 57, 3, 89, 6, 75, 94, 23, 35, 76, 98, 38, 58, 28, 50, 22, 54, 100, 79, 70, 15, 39, 49, 21, 73, 18, 92, 74, 40, 51, 64, 52, 99, 95, 93, 16, 19, 60, 31, 56, 87, 33, 47, 55, 81, 5, 69, 62, 66, 1, 9, 67, 12, 83, 24, 41, 36, 91]\n",
+      "Time taken:  0.057220458984375\n",
+      "Sorted Array using Lomuto's Partition Scheme: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100]\n",
+      "Swaps using Lomuto's approach: 505\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import time\n",
+    "swaps_lomuto = 0\n",
+    "\n",
+    "def partition_lomuto(arr, low, high):\n",
+    "    global swaps_lomuto\n",
+    "    pivot = arr[high]\n",
+    "    i = low - 1\n",
+    "    \n",
+    "    for j in range(low, high):\n",
+    "        if arr[j] <= pivot:\n",
+    "            i += 1\n",
+    "            swaps_lomuto += 1\n",
+    "            arr[i], arr[j] = arr[j], arr[i]\n",
+    "    \n",
+    "    swaps_lomuto += 1\n",
+    "    arr[i + 1], arr[high] = arr[high], arr[i + 1]\n",
+    "    return i + 1\n",
+    "\n",
+    "def quicksort_lomuto(arr, low, high):\n",
+    "    if low < high:\n",
+    "        pivot = partition_lomuto(arr, low, high)\n",
+    "        quicksort_lomuto(arr, low, pivot - 1)\n",
+    "        quicksort_lomuto(arr, pivot + 1, high)\n",
+    "\n",
+    "arr = list(range(1,101))\n",
+    "random.shuffle(arr)\n",
+    "print(\"Original Array:\", arr)\n",
+    "\n",
+    "start_time = time.time()\n",
+    "quicksort_lomuto(arr, 0, len(arr) - 1)\n",
+    "end_time = time.time()\n",
+    "print(\"Time taken: \",(end_time-start_time)*1000)\n",
+    "print(\"Sorted Array using Lomuto's Partition Scheme:\", arr)\n",
+    "print(\"Swaps using Lomuto's approach:\", swaps_lomuto)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c4d56ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "709c7264",
    "metadata": {},
    "outputs": [],
    "source": []
