--- a/AA/Randomised QuickSort.ipynb
+++ b/AA/Randomised QuickSort.ipynb
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "8f2b1640",
    "metadata": {},
    "outputs": [
@@ -378,10 +378,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original Array: [55, 92, 11, 4, 52, 67, 93, 18, 47, 8, 84, 51, 6, 75, 99, 14, 80, 40, 38, 94, 82, 39, 49, 32, 95, 15, 28, 100, 45, 29, 71, 66, 70, 13, 76, 83, 20, 23, 81, 53, 88, 27, 72, 58, 77, 19, 79, 5, 73, 48, 87, 90, 64, 3, 9, 50, 42, 25, 10, 89, 12, 78, 7, 68, 86, 56, 98, 96, 24, 37, 1, 74, 54, 36, 60, 69, 16, 34, 59, 35, 21, 22, 91, 41, 62, 31, 30, 33, 2, 43, 61, 44, 63, 17, 57, 46, 85, 26, 65, 97]\n",
-      "Time taken:  1.0075569152832031\n",
+      "Original Array: [6, 7, 100, 55, 8, 12, 77, 82, 20, 61, 26, 52, 2, 28, 19, 41, 92, 99, 15, 86, 66, 68, 94, 46, 14, 97, 75, 83, 24, 90, 1, 40, 87, 84, 18, 43, 16, 93, 64, 76, 96, 95, 38, 70, 35, 74, 3, 85, 25, 4, 79, 29, 88, 34, 60, 9, 71, 67, 47, 36, 45, 31, 62, 44, 11, 10, 98, 50, 49, 91, 5, 72, 32, 42, 89, 17, 51, 23, 30, 53, 80, 13, 27, 56, 48, 22, 78, 69, 58, 21, 37, 54, 81, 73, 57, 65, 33, 59, 63, 39]\n",
+      "Time taken:  0.0\n",
       "Sorted Array using Hoare's Partition Scheme: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100]\n",
-      "Swaps using Hoare's approach: 160\n"
+      "Swaps using Hoare's approach: 157\n"
      ]
     }
    ],
@@ -443,18 +443,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "b5ce8809",
+   "execution_count": 2,
+   "id": "7c4d56ad",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original Array: [88, 25, 34, 48, 26, 37, 96, 29, 8, 61, 84, 59, 20, 11, 82, 71, 7, 80, 30, 2, 85, 77, 78, 46, 13, 68, 45, 97, 53, 90, 44, 42, 17, 32, 4, 65, 14, 10, 86, 43, 63, 27, 72, 57, 3, 89, 6, 75, 94, 23, 35, 76, 98, 38, 58, 28, 50, 22, 54, 100, 79, 70, 15, 39, 49, 21, 73, 18, 92, 74, 40, 51, 64, 52, 99, 95, 93, 16, 19, 60, 31, 56, 87, 33, 47, 55, 81, 5, 69, 62, 66, 1, 9, 67, 12, 83, 24, 41, 36, 91]\n",
-      "Time taken:  0.057220458984375\n",
+      "Original Array: [55, 15, 19, 72, 94, 52, 23, 51, 24, 20, 18, 41, 14, 65, 7, 31, 11, 89, 62, 83, 71, 56, 79, 97, 66, 47, 17, 58, 85, 93, 26, 95, 88, 96, 53, 35, 90, 43, 63, 100, 38, 61, 75, 99, 2, 84, 81, 5, 59, 45, 54, 86, 16, 69, 30, 10, 48, 70, 46, 32, 64, 73, 29, 36, 21, 27, 40, 50, 78, 98, 8, 9, 22, 4, 68, 12, 44, 6, 49, 33, 1, 13, 34, 77, 42, 39, 25, 80, 87, 67, 37, 76, 57, 74, 28, 92, 91, 3, 60, 82]\n",
+      "Time taken:  0.0\n",
       "Sorted Array using Lomuto's Partition Scheme: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100]\n",
-      "Swaps using Lomuto's approach: 505\n"
+      "Swaps using Lomuto's approach: 408\n"
      ]
     }
    ],
@@ -499,15 +499,145 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c4d56ad",
+   "id": "709c7264",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "7699011c",
+   "metadata": {},
+   "source": [
+    "# Randomised Aaditya"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d3767fd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time Hoare: 0.01611185073852539\n",
+      "Comparisons Hoare: 23144\n",
+      "Time Lomuto: 0.0052471160888671875\n",
+      "Comparisons Lomuto: 4911\n",
+      "Time Standard: 0.003957271575927734\n",
+      "Comparisons Standard: 5947\n"
+     ]
+    }
+   ],
+   "source": [
+    "from numpy import random\n",
+    "import time\n",
+    "\n",
+    "# Global variables to count comparisons\n",
+    "hoare_comparisons = 0\n",
+    "lomuto_comparisons = 0\n",
+    "standard_comparisons = 0\n",
+    "\n",
+    "def partitionHoare(arr, low, high):\n",
+    "    global hoare_comparisons\n",
+    "    pivot_index = random.randint(low, high + 1)\n",
+    "    arr[high], arr[pivot_index] = arr[pivot_index], arr[high]\n",
+    "    pivot = arr[high]\n",
+    "    i = low - 1\n",
+    "    j = high\n",
+    "    while True:\n",
+    "        i += 1\n",
+    "        while arr[i] < pivot:\n",
+    "            hoare_comparisons += 1\n",
+    "            i += 1\n",
+    "        j -= 1\n",
+    "        while arr[j] > pivot:\n",
+    "            hoare_comparisons += 1\n",
+    "            j -= 1\n",
+    "        if i >= j:\n",
+    "            return j\n",
+    "        arr[i], arr[j] = arr[j], arr[i]\n",
+    "\n",
+    "def quickSortHoare(arr, low, high):\n",
+    "    if low < high:\n",
+    "        pi = partitionHoare(arr, low, high)\n",
+    "        quickSortHoare(arr, low, pi)\n",
+    "        quickSortHoare(arr, pi + 1, high)\n",
+    "\n",
+    "def partitionLomuto(arr, low, high):\n",
+    "    global lomuto_comparisons\n",
+    "    pivot_index = random.randint(low, high + 1)\n",
+    "    arr[high], arr[pivot_index] = arr[pivot_index], arr[high]\n",
+    "    pivot = arr[high]\n",
+    "    i = low - 1\n",
+    "    for j in range(low, high):\n",
+    "        if arr[j] <= pivot:\n",
+    "            lomuto_comparisons += 1\n",
+    "            i += 1\n",
+    "            arr[i], arr[j] = arr[j], arr[i]\n",
+    "    arr[i + 1], arr[high] = arr[high], arr[i + 1]\n",
+    "    return i + 1\n",
+    "\n",
+    "def quickSortLomuto(arr, low, high):\n",
+    "    if low < high:\n",
+    "        pi = partitionLomuto(arr, low, high)\n",
+    "        quickSortLomuto(arr, low, pi - 1)\n",
+    "        quickSortLomuto(arr, pi + 1, high)\n",
+    "\n",
+    "def partition(arr, low, high):\n",
+    "    global standard_comparisons\n",
+    "    pivot = arr[high]\n",
+    "    i = low - 1\n",
+    "    for j in range(low, high):\n",
+    "        if arr[j] <= pivot:\n",
+    "            standard_comparisons += 1\n",
+    "            i += 1\n",
+    "            arr[i], arr[j] = arr[j], arr[i]\n",
+    "    arr[i + 1], arr[high] = arr[high], arr[i + 1]\n",
+    "    return i + 1\n",
+    "\n",
+    "def quickSort(arr, low, high):\n",
+    "    if low < high:\n",
+    "        pi = partition(arr, low, high)\n",
+    "        quickSort(arr, low, pi - 1)\n",
+    "        quickSort(arr, pi + 1, high)\n",
+    "\n",
+    "arrH = random.randint(100000, size=(1000))\n",
+    "arrL = arrH.copy()\n",
+    "arr = arrH.copy()\n",
+    "n = len(arrH)\n",
+    "\n",
+    "# Reset comparison counts\n",
+    "hoare_comparisons = 0\n",
+    "lomuto_comparisons = 0\n",
+    "standard_comparisons = 0\n",
+    "\n",
+    "start = time.time()\n",
+    "quickSortHoare(arrH, 0, n - 1)\n",
+    "end = time.time()\n",
+    "\n",
+    "start1 = time.time()\n",
+    "quickSortLomuto(arrL, 0, n - 1)\n",
+    "end1 = time.time()\n",
+    "\n",
+    "start2 = time.time()\n",
+    "quickSort(arr, 0, n - 1)\n",
+    "end2 = time.time()\n",
+    "\n",
+    "print(f'Time Hoare: {end - start}')\n",
+    "print(f'Comparisons Hoare: {hoare_comparisons}')\n",
+    "print(f'Time Lomuto: {end1 - start1}')\n",
+    "print(f'Comparisons Lomuto: {lomuto_comparisons}')\n",
+    "print(f'Time Standard: {end2 - start2}')\n",
+    "print(f'Comparisons Standard: {standard_comparisons}')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "709c7264",
+   "id": "5a5b6468",
    "metadata": {},
    "outputs": [],
    "source": []
